Added user preferences (#80)
* Added user preferences

* Removed commented code

* Removed unnecessary code

* Removed tax_value field

---------
