# src/ams/models.py
@@ -103,3 +103,9 @@ class StockBalance(models.Model):
 
     def __str__(self):
         return f"{self.quantity} of {self.isin} for {self.account_id}"
+
+
+class AccountPreferences(models.Model):
+    account = models.OneToOneField(Account, on_delete=models.CASCADE, related_name='account_preferences', unique=True)
+    base_currency = models.CharField(max_length=3)
+    tax_currency = models.CharField(max_length=3)
